Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29033

Using {} initializer with digits separator (') breaks the clang format

XMLWordPrintable

    • 0c37fc356 (10.0)

      For example 

      int i{10'000'000}

      is formatted with unnecessary spaces so that it becomes

      int i{10' 000' 000}

      And for example 

      int i{10'000}

      becomes 

      int i
         

      Unknown macro: {         10'000}

      And if only indenting is used it will add incorrectly indentation to the following line:

          int i{10'000};
                  qDebug() << i;

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            artem.sokolovskii Artem Sokolovskii (Inactive)
            tuomas.vaarala Tuomas Vaarala
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes